Correct flickering border of timeline header

--- a/app/assets/stylesheets/content/work_packages/timelines/_timelines_header.sass
+++ b/app/assets/stylesheets/content/work_packages/timelines/_timelines_header.sass
@@ -24,7 +24,7 @@ wp-timeline-header
   white-space: nowrap
 
   &.-top-border
-    border-top: 1px solid $timeline--header-border-color
+    outline: 1px solid $timeline--header-border-color
 
 .wp-timeline--header-day-element
   height: 12px
@@ -33,7 +33,6 @@ wp-timeline-header
 
 .wp-timeline--header-middle-element
   border-top: 1px solid $timeline--header-border-color
-  border-bottom: 1px solid $timeline--header-border-color
   padding-top: 5px
   height: 20px
 
